tests/multi_file/passing/P3_namespace_include_private/main.mlang
include "math/module.mlang";

fn main ||->() {
    println(f64_to_string(math::public_pi()));
};
