tests/multi_file/failing/P2_private_include_pub_hint/main.mlang
include "module.mlang";

fn main ||->() {
    println(secrets::token);
};
